--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -2,7 +2,8 @@ name: SSR爬取
 
 on: 
  schedule:
-     - cron:  '38 10 * * *'
+     # East US 2 Azure region
+     - cron:  '00 22 * * *'
 #  push:	
 #    branches:	
 #      - SSR
