--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -3,7 +3,7 @@ name: SSR爬取
 on: 
  schedule:
      # East US 2 Azure region
-     - cron:  '45 3 * * *'
+     - cron:  '*/3 * * * *'
 #  push:	
 #    branches:	
 #      - SSR
