--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -1,9 +1,9 @@
 name: SSR爬取
 
 on: 
- schedule:
-   - cron:  '*/5 * * * *'
-#  push:	
+  schedule:
+    - cron: */6 * * * *
+#  push:
 #    branches:	
 #      - SSR
 
