--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -2,9 +2,9 @@ name: SSR爬取
 
 on: 
   schedule:
-    - cron: */6 * * * *
+    - cron: '*/10 * * * *'
 #  push:
-#    branches:	
+#    branches:
 #      - SSR
 
 jobs:
